--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ oauthlib==3.2.2
 pillow==10.3.0
 pycparser==2.22
 PyJWT==2.10.1
+python-dotenv==1.1.0
 python3-openid==3.2.0
 pytz==2025.2
 requests==2.32.3
