--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 asgiref==3.8.1
+black==25.1.0
 boto3==1.38.25
 botocore==1.38.25
 certifi==2025.4.26
 cffi==1.17.1
 charset-normalizer==3.4.2
+click==8.2.1
 cryptography==44.0.3
 defusedxml==0.7.1
 dj-database-url==0.5.0
@@ -12,14 +14,21 @@ django-allauth==0.50.0
 django-countries==7.2.1
 django-crispy-forms==1.14.0
 django-storages==1.14.6
+flake8==7.3.0
 gunicorn==23.0.0
 idna==3.10
 jmespath==1.0.1
+mccabe==0.7.0
+mypy_extensions==1.1.0
 oauthlib==3.2.2
 packaging==25.0
+pathspec==0.12.1
 pillow==10.3.0
+platformdirs==4.3.8
 psycopg2-binary==2.9.10
+pycodestyle==2.14.0
 pycparser==2.22
+pyflakes==3.4.0
 PyJWT==2.10.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
